--- a/index.html
+++ b/index.html
@@ -28,13 +28,9 @@
           <button id="addBtn">ADD</button>
         </div>
       </div>
-      <div class="recipe-container">
+      <div class="recipe-section">
         <h1>RECIPES</h1>
-        <div class="recipe-wrapper">
-          <h1>ADOBO</h1>
-          <p>Pinoy style adobo</p>
-          <button>Preview</button>
-        </div>
+        <div class="recipe-container"></div>
       </div>
     </div>
 
